# PeerTranslate

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  create_blueprint_files.py  docker-compose.yml  force_inject_glossaries.py  generate_glossaries.py  pyproject.toml  render.yaml  requirements.txt  test_e2e.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  glossary_contribution.md
.github/workflows/: ci.yml
backend/: __init__.py  cache.py  config.py  exporter.py  figure_extractor.py  glossary.py  main.py  pdf_renderer.py  translator.py  verifier.py
docs/: PeerTranslate.md  PeerTranslate.tex  architecture.md  neurips_2025.sty
extension/: README.md  content.css  content.js  manifest.json
frontend/: contribute.html  index.html  leaderboard.html  review.html
frontend/css/: style.css
frontend/js/: app.js
glossaries/: README.md
glossaries/ar/: agriculture.json  astronomy.json  biology.json  business.json  chemistry.json  cs.json  earth_sciences.json  economics.json  engineering.json  general_academic.json  law.json  linguistics.json  materials_science.json  math.json  medicine.json  ml.json  physics.json  political_science.json  psychology.json  sociology.json  statistics.json
glossaries/bn/: agriculture.json  astronomy.json  biology.json  business.json  chemistry.json  cs.json  earth_sciences.json  economics.json  engineering.json  general_academic.json  law.json  linguistics.json  materials_science.json  math.json  medicine.json  ml.json  physics.json  political_science.json  (+3 more)
tests/: inspect_pdf.py  test_cache.py  test_config.py  test_glossary.py  test_verifier.py
(+273 files in other folders)
